Change HMS placement to prefix button pattern and add tests (#570)